--- a/openstack_controller/templates/macros/connections.j2
+++ b/openstack_controller/templates/macros/connections.j2
@@ -1,8 +1,15 @@
 {% macro to_child_object(service, chart, kind, name, ports) %}
-to_child_object: 
+to_child_object:
   service: {{ service }}
   chart: {{ chart }}
   kind: {{ kind }}
   name: {{ name }}
   ports: {{ ports }}
+{%- endmacro -%}
+
+{% macro from_pod_networks(pod_networks) %}
+{%- for network in pod_networks %}
+- ipBlock:
+    cidr: {{ network["cidr"] }}
+{%- endfor %}
 {%- endmacro -%}
