Add network policies for ingress
Related-Prod: PRODX-34781
Change-Id: Id3ef2d715145a9930966ac3a6947577bffb97dd3

--- a/openstack_controller/templates/macros/connections.j2
+++ b/openstack_controller/templates/macros/connections.j2
@@ -13,3 +13,8 @@ to_child_object:
     cidr: {{ network["cidr"] }}
 {%- endfor %}
 {%- endmacro -%}
+
+{% macro from_all() %}
+- ipBlock:
+    cidr: '0.0.0.0/0'
+{%- endmacro -%}
