Add network policies for identity
Related-Prod: PRODX-34767
Change-Id: I0747164a089075a5702ea5f6a8380b4fa6f46bb4

--- a/openstack_controller/templates/macros/connections.j2
+++ b/openstack_controller/templates/macros/connections.j2
@@ -18,3 +18,11 @@ to_child_object:
 - ipBlock:
     cidr: '0.0.0.0/0'
 {%- endmacro -%}
+
+{% macro from_namespaces(ns_list) %}
+  {%- for ns in ns_list %}
+- namespaceSelector:
+    matchLabels:
+        name: {{ ns }}
+  {%- endfor -%}
+{%- endmacro -%}
