--- a/openstack_controller/templates/macros/etcd3.j2
+++ b/openstack_controller/templates/macros/etcd3.j2
@@ -1,7 +1,7 @@
 {% macro get_etcd3_endpoint(openstack_version, driver) -%}
 {% if driver == 'etcd3' %} etcd3://etcd:2379
 {%- elif driver == 'etcd3gw' %}
-{%- if openstack_version in ['queens', 'rocky', 'stein', 'train', 'ussuri'] -%} etcd3+http://etcd:2379
+{%- if OSVer[openstack_version] <= OSVer.ussuri -%} etcd3+http://etcd:2379
 {%- else -%} etcd3+http://etcd:2379?api_version=auto
 {%- endif -%}
 {% else %}
