[oc-virtual-lab] Use LVP as persistant storage for single node deployment
Related-Prod: PRODX-3456
Change-Id: Ib595444bbe452d104b91f7fd97cdaaf38eb1acc8

--- a/virtual_lab/ansible/roles/oc/templates/osdpl.j2
+++ b/virtual_lab/ansible/roles/oc/templates/osdpl.j2
@@ -10,6 +10,7 @@ spec:
     binary_base_url: {{ openstack_controller.osdpl.binary_base_url }}
     images_base_url: {{ openstack_controller.osdpl.images_base_url }}
   local_volume_storage_class: lvp-fake-root
+  persistent_volume_storage_class: lvp-fake-root
   openstack_version: {{ oc_osdpl_openstack_version }}
   preset: core
   size: single
