[oc-virtual-lab] Route FIP network via 0 k8s controller
Related-Prod: PRODX-3456
Change-Id: Ic16d38ca894460676cc46a95f9c3d3ae4b6f85eb

--- a/virtual_lab/ansible/roles/oc/templates/netplan-os-floating.j2
+++ b/virtual_lab/ansible/roles/oc/templates/netplan-os-floating.j2
@@ -3,3 +3,11 @@ network:
   ethernets:
       {{ veth.src }}: {}
       {{ veth.dst }}: {}
+{% if oc_controller_node_main %}
+  bridges:
+    br-fip:
+      interfaces:
+        - {{ veth.dst }}
+      addresses:
+        - 10.11.12.11/24
+{% endif %}
