[mariadb] Implement openssl encryption
Allow to encrypt backups with openssl encryption.

Related-Prod: PRODX-47771

Change-Id: Icf93a8dd38bcfa172a878f53b9f6c877fedd3d5b

--- a/charts/infra/mariadb/files/resque_runner.yaml.j2
+++ b/charts/infra/mariadb/files/resque_runner.yaml.j2
@@ -75,6 +75,10 @@ spec:
           readOnly: true
         - mountPath: /var/lib/mysql
           name: mysql-data
+        - mountPath: /etc/mysql/backup-kek
+          name: mariadb-secrets
+          subPath: openssl_kek
+          readOnly: true
   restartPolicy: Never
   serviceAccount: {{ runner_service_account }}
   serviceAccountName: {{ runner_service_account }}
